fixed spacing issue with h3

--- a/base-theme/assets/css/main.scss
+++ b/base-theme/assets/css/main.scss
@@ -80,6 +80,10 @@ h3 {
   color: $black;
 }
 
+a + h3 {
+  margin-top: 1rem;
+}
+
 @include media-breakpoint-down(xs) {
   h3 {
     font-size: 18px;
